tests/reject/toplevel_let_in.alg
sort S : Sort;
op f : S → S;
op x : → S;
let y = f(x) in f(y);
